Added subhed to basic single posts and more color consistency

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -5,10 +5,13 @@ $voared:    #d41010;
 $voagray:   #919191;
 
 $offwhite:  #fcfcfc;
-$offblack:  #333;
 
 $bodybg:    #eee;
 
-$highlight: #7fdbff;
-
 $vltgray:   #ddd;
+$ltgray:    #999;
+$midgray:   #666;
+
+$offblack:  #333;
+
+$highlight: #7fdbff;
