Started building author.php archive pages

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -15,3 +15,11 @@ $midgray:   #666;
 $offblack:  #333;
 
 $highlight: #7fdbff;
+
+// social media colors
+$facebook_color:   #3b5998;
+$googleplus_color: #db4437;
+$linkedin_color:   #0077b5;
+$pinterest_color:  #bd081c;
+$reddit_color:     #ff4500;
+$twitter_color:    #55acee;
